# django-style

./: .pre-commit-config.yaml  MANIFEST.in  README.md  example.py  pyproject.toml
django_style/: __init__.py  apps.py  constants.py  context_processors.py  nanodjango.py  utils.py
django_style/static/django_style/bootstrap/: styles.css
django_style/static/django_style/simple/: styles.css
django_style/static/django_style/tailwind/: site.js
django_style/templates/: base.html
django_style/templates/django_style/bootstrap/: base.html
django_style/templates/django_style/simple/: base.html
django_style/templates/django_style/tailwind/: base.html
docs/: changelog.rst  conf.py  contributing.rst  demo.rst  index.rst  installation.rst  menus.rst  usage.rst
tests/: requirements.txt  test_apps.py  test_settings.py
tests/test_project/: settings.py  urls.py
tests/test_project/templates/: test.html
